--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -25,3 +25,16 @@ jobs:
     - name: Run tests
       run: |
         python -m unittest discover -s tests
+  
+  sleepy-time:
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Napping
+      run: |
+        sleep 15
+
+    - name: Wake up
+      run: |
+        echo "I have slept enough!"
+      
