--- a/.github/workflows/python-ci.yaml
+++ b/.github/workflows/python-ci.yaml
@@ -40,7 +40,7 @@ jobs:
 
   angry-girlfriend:
     runs-on: ubuntu-latest
-    needs: sleepy time
+    needs: sleepy-time
 
     steps:
     - name: Rage
